# BluEngine

./: CMakeLists.txt  README.md  main.cpp
content/shaders/: basic.vert  triangle.vert  triangle.vert.spv
core/: application.cpp  application.h  config.cpp  config.h  etime.cpp  etime.h
renderer/: indexbuffer.cpp  indexbuffer.h  pipelinemanager.cpp  pipelinemanager.h  renderer.cpp  renderer.h  shadermanager.cpp  shadermanager.h  uniformbuffer.cpp  uniformbuffer.h  vertex.h  vertexbuffer.cpp  vertexbuffer.h
